--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Courier New', monospace;
-    background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed;
+    background: #d4c5a0 url('media/background-texture.png') center/cover fixed;
     color: #2a2a2a;
     overflow-x: hidden;
 }
